# akkadia

./: Cargo.toml
akkadia/: .gitignore  Cargo.toml  README.md
akkadia-span/: Cargo.toml  README.md
akkadia-vfs/: Cargo.toml  README.md
akkadia-vfs/src/: lib.rs
akkadia/src/: lsp_data.rs  main.rs
akkadia/src/actions/: mod.rs  notifications.rs  requests.rs
akkadia/src/server/: io.rs  mod.rs
akkadia/src/test/: harness.rs  mod.rs
akkadia/test_data/common/src/: main.slang
