[package]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
name = "akkadia"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
fern = "0.4.3"
jsonrpc-core = "7.1.1"
languageserver-types = "0.12.0"
lazy_static = "0.2.9"
log = "0.3.8"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
url = "1.5.1"

[dependencies.akkadia-span]
features = ["serialize-serde"]
path = "../akkadia-span"

[dependencies.akkadia-vfs]
path = "../akkadia-vfs"
